cmake_minimum_required(VERSION 3.23)
project(Section5WindowSliding)

set(CMAKE_CXX_STANDARD 14)

add_executable(K-sum K-Sum/main.cpp)
add_executable(SubString SubString/main.cpp)
add_executable(SubString2 SubString/SecondSolution.cpp)
add_executable(StringWindow StringWindow/main.cpp)
add_executable(Exercises Exercises/main.cpp)
